added full form validation, enums, CRUD, search feature